WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282890
[ANGLE] Fix leaks in NewMetalLibraryFromMetallib() on every call
https://bugs.webkit.org/show_bug.cgi?id=282890
Summary
[ANGLE] Fix leaks in NewMetalLibraryFromMetallib() on every call
David Kilzer (:ddkilzer)
Reported
2024-11-09 21:09:10 PST
NewMetalLibraryFromMetallib() leaks id<MTLLibrary> on every call. Regressed with this change: - return context->getMetalDevice().newLibraryWithData(mtl_data, &nsError); + return [metalDevice newLibraryWithData:mtl_data error:&nsError]; Because the C++ function was returning AutoObjCPtr<id<MTLLibrary>> but the Objective-C method returns a +1 retained id<MTLLibrary>. For this commit: Update ANGLE to 2024-07-31 (3e83d1887e2bad0d5dac01b37fa94b88188ecd4f) <
https://bugs.webkit.org/show_bug.cgi?id=277410
> <
rdar://problem/132885219
> <
https://commits.webkit.org/281691@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-09 21:09:29 PST
<
rdar://problem/139586222
>
David Kilzer (:ddkilzer)
Comment 2
2024-11-09 21:33:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36455
EWS
Comment 3
2024-11-11 01:57:45 PST
Committed
286425@main
(8826887be8c6): <
https://commits.webkit.org/286425@main
> Reviewed commits have been landed. Closing PR #36455 and removing active labels.
Kenneth Russell
Comment 4
2024-11-11 10:29:56 PST
FYI
https://issues.angleproject.org/issues/378464308
has been filed about upstreaming this fix to ANGLE.
EWS
Comment 5
2024-11-12 14:05:11 PST
Committed
283286.473@safari-7620-branch
(c5e92067cac8): <
https://commits.webkit.org/283286.473@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2272 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug