[ANGLE] Fix leaks in NewMetalLibraryFromMetallib() on every call <https://bugs.webkit.org/show_bug.cgi?id=282890> <rdar://139586222>

Reviewed by Kimmo Kinnunen.

* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_library_cache.mm:
(rx::(anonymous)::NewMetalLibraryFromMetallib):
- Use adoptObjCObj() to fix leak of id<MTLLibrary>.
- Call dispatch_release() to fix leak of dispatch_data_t.

* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_utils.mm:
(rx::mtl::CreateShaderLibraryFromBinary):
- Use DISPATCH_DATA_DESTRUCTOR_DEFAULT instead of empty block.
- Replace ANGLE_MTL_AUTORELEASE with adoptObjCObj() to avoid unneeded
  autorelease of id<MTLLibrary> object.

Canonical link: https://commits.webkit.org/286425@main