Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_library_cache.mm
@@ -110,7 +110,11 @@ AutoObjCPtr<id<MTLLibrary>> NewMetalLibraryFromMetallib(id<MTLDevice> metalDevic
                                              DISPATCH_DATA_DESTRUCTOR_DEFAULT);
 
         NSError *nsError = nil;
-        return [metalDevice newLibraryWithData:mtl_data error:&nsError];
+        auto library = adoptObjCObj([metalDevice newLibraryWithData:mtl_data error:&nsError]);
+
+        dispatch_release(mtl_data);
+
+        return library;
     }
 }
 
